sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: value && is not a member of Int
    }while (plusPetit(v,getValeur(j-1) && j>1))
                                       ^